added dist build

--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "rest-express",
+  "homepage": "http://www.embakh.co.za/",
   "version": "1.0.0",
   "type": "module",
   "license": "MIT",
