--- a/package.json
+++ b/package.json
@@ -1,6 +1,5 @@
 {
   "name": "rest-express",
-  "homepage": "http://www.embakh.co.za/",
   "version": "1.0.0",
   "type": "module",
   "license": "MIT",
@@ -74,7 +73,6 @@
     "vaul": "^1.1.2",
     "wouter": "^3.3.5",
     "ws": "^8.18.0",
-    "zip": "^1.2.0",
     "zod": "^3.24.2",
     "zod-validation-error": "^3.4.0"
   },
@@ -100,7 +98,8 @@
     "tailwindcss": "^3.4.17",
     "tsx": "^4.19.1",
     "typescript": "5.6.3",
-    "vite": "^5.4.14"
+    "vite": "^5.4.14",
+    "vite-plugin-prerender": "^1.0.8"
   },
   "optionalDependencies": {
     "bufferutil": "^4.0.8"
